@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-06-21] RFC4880: added AlgorithmHashTextName()
 * [2018-06-19] RFC4880: added some stuff for cleartext signature framework
 * [2018-06-17] mpz_srandom: use additional Botan RNG, if configured --with-botan
 * [2018-06-15] mpz_sprime: added non-incremental generator for (safe) primes
